--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,9 +3,11 @@
 @import "fonts";
 @import "components/scrollbar";
 @import "components/section-title";
+@import "components/up";
 @import "components/page-nav";
-@import "components/header-main";
+@import "components/header";
 @import "components/burger";
+@import "components/nav-chain";
 @import "components/screen";
 @import "components/utp";
 @import "components/advantages";
@@ -14,3 +16,10 @@
 @import "components/album";
 @import "components/news";
 @import "components/footer";
+@import "components/apartment";
+@import "components/building";
+@import "components/calc-ipoteka";
+@import "components/contacts-content";
+@import "components/sales-department";
+@import "components/select";
+@import "components/news-content";
