--- a/styles/components/_burger.scss
+++ b/styles/components/_burger.scss
@@ -3,6 +3,7 @@
     display: flex;
     width: 100%;
     height: 100dvh;
+    top: 0;
     right: -100%;
     z-index: 100;
     transition: all .3s ease-in-out;
