--- a/styles/components/_contacts-content.scss
+++ b/styles/components/_contacts-content.scss
@@ -1,21 +1,41 @@
-.contacts  {
+.contacts {
+    position: relative;
     display: flex;
     flex-direction: column;
+    height: 1135px;
+    overflow: hidden;
+
+    @media screen and (max-width: 1600px) {
+        height: 1020px;
+    }
+
+    @media #{$desktop} {
+        height: 860px;
+    }
+
+    @media screen and (max-width: 1213px) {
+        height: 930px;
+    }
+
+    @media #{$tablet} {
+        height: 965px;
+    }
+
+    @media #{$phone} {
+        height: 790px;
+    }
+
+    @media screen and (max-width: 500px) {
+        height: 760px;
+    }
 
     &__title {
-        margin-top: 194px;
-        margin-bottom: 50px;
-
-        @media #{$tablet} {
-            margin: 100px 0 33px 0;
-        }
+        margin-top: 35px;
 
         @media #{$phone} {
-            margin: 100px 0 10px 0;
-        }
-
-        @media screen and (max-width: 600px) {
-            margin-left: 13px;
+            font-size: 40px;
+            line-height: 40px;
+            margin-top: 15px;
         }
     }
 
@@ -24,8 +44,19 @@
         justify-content: space-between;
         flex-direction: row;
         flex-wrap: wrap;
+        background-color: $color-white;
         width: 83%;
+        padding: 34px 8.5% 88px;
         margin: 0 auto;
+        
+        @media #{$tablet} {
+            flex-direction: column;
+            flex-wrap: nowrap;
+            background-color: transparent;
+            width: auto;
+            padding: 20px 13px 88px;
+            margin: 0;
+        }
 
         &__address,
         &__socials,
@@ -33,6 +64,26 @@
         &__tel-box {
             margin: 0;
             margin-bottom: 20px;
+        }
+
+        &__address {
+            @media #{$tablet} {
+                margin-bottom: 250px;
+            }
+
+            @media #{$phone} {
+                margin-bottom: 180px;
+            }
+
+            @media screen and (max-width: 500px) {
+                margin-bottom: 160px;
+            }
+        }
+
+        &__tel-box a {
+            @media #{$phone} {
+                font-size: 15px;
+            }
         }
 
         &__socials {
@@ -48,11 +99,8 @@
         position: relative;
         display: flex;
         flex-direction: column;
-        background: url(../imgs/contacts-bg.png) no-repeat;
-        background-position: center;
-        background-size: cover;
         height: 602px;
-        margin-top: 150px;
+        margin-top: 67px;
         margin-bottom: 50px;
 
         &__photos {
@@ -62,8 +110,21 @@
             transform: translateY(-100px);
             z-index: 1;
 
+            @media #{$desktop} {
+                transform: translateY(-150px);
+            }
+
             @media #{$tablet} {
-                justify-content: center;
+                margin: 0 13px;
+                transform: translateY(-675px);
+            }
+
+            @media #{$phone} {
+                transform: translateY(-613px);
+            }
+
+            @media screen and (max-width: 500px) {
+                transform: translateY(-590px);
             }
         }
 
@@ -73,18 +134,54 @@
             margin-right: 15px;
             cursor: pointer;
 
-            @media #{$tablet} {
-                display: none;
-                margin-right: 0;
-
-                &:first-child {
-                    display: block;
-                }
+            @media #{$desktop} {
+                max-width: 280px;
+            }
+            
+            @media #{$phone} {
+                margin-right: 6px;
+                max-width: 200px;
             }
 
-            @media #{$phone} {
-                max-width: 300px;
-                max-height: 188px;
+            @media screen and (max-width: 500px) {
+                height: 146px;
+            }
+        }
+
+        &__house {
+            position: absolute;
+            top: 145px;
+            right: 0;
+            pointer-events: none;
+
+            @media screen and (max-width: 1780px) {
+                right: -100px;
+            }
+
+            @media screen and (max-width: 1655px) {
+                right: -200px;
+            }
+
+            @media screen and (max-width: 1540px) {
+                width: 900px;
+                top: 200px;
+                right: -100px;
+            }
+
+            @media screen and (max-width: 1465px) {
+                right: -200px;
+            }
+
+            @media screen and (max-width: 1365px) {
+                right: -300px;
+            }
+
+            @media screen and (max-width: 1150px) {
+                right: -400px;
+            }
+
+            @media #{$tablet} {
+                display: none;
             }
         }
 
@@ -92,8 +189,40 @@
             display: flex;
             width: max-content;
             height: max-content;
+            border-radius: 20px;
             margin: 0 auto;
             z-index: 1;
+
+            @media screen and (max-width: 1600px) {
+                width: 1200px;
+            }
+
+            @media #{$desktop} {
+                width: 979px;
+                margin-top: -50px;
+            }
+            
+            @media #{$tablet} {
+                object-fit: cover;
+                width: 729px;
+                height: 300px;
+            }
+
+            @media #{$tablet} {
+                width: calc(100% - 26px);
+                height: 250px;
+                margin-top: -400px;
+            }
+
+            @media #{$phone} {
+                height: 200px;
+                margin-top: -330px;
+            }
+
+            @media screen and (max-width: 500px) {
+                height: 179px;
+                margin-top: -300px;
+            }
         }
 
         &__clouds {
@@ -101,6 +230,10 @@
             overflow: hidden;
             width: 100%;
             height: 100%;
+
+            @media #{$tablet} {
+                display: none;
+            }
         }
 
         &__cloud {
@@ -108,47 +241,52 @@
             pointer-events: none;
 
             &:nth-child(1),
-            &:nth-child(2),
-            &:nth-child(3),
-            &:nth-child(4),
-            &:nth-child(5) {
-                top: -192px;
-            }
-
-            &:nth-child(6),
-            &:nth-child(7) {
-                width: 1367px;
-                height: 684px;
+            &:nth-child(3) {
+                width: 512px;
             }
 
             &:nth-child(1) {
-                right: -264px;
+                top: 150px;
+                left: 600px;
+
+                @media screen and (max-width: 1840px) {
+                    left: 500px;
+                }
+
+                @media #{$desktop} {
+                    top: 60px;
+                    left: 400px;
+                }
+
+                @media screen and (max-width: 1213px) {
+                    left: 300px;
+                }
             }
 
             &:nth-child(2) {
-                left: 177px;
+                width: 988px;
+                right: -340px;
+                bottom: -175px;
+
+                @media screen and (max-width: 1540px) {
+                    bottom: -100px;
+                }
+
+                @media #{$desktop} {
+                    bottom: -225px;
+                }
+
+                @media screen and (max-width: 1213px) {
+                    bottom: -160px;
+                }
             }
 
             &:nth-child(3) {
-                right: 406px;
-            }
+                right: -250px;
 
-            &:nth-child(4) {
-                right: 145px;
-            }
-            
-            &:nth-child(5) {
-                left: 230px;
-            }
-
-            &:nth-child(6) {
-                left: -340px;
-                bottom: -377px;
-            }
-
-            &:nth-child(7) {
-                right: -686px;
-                bottom: -385px;
+                @media screen and (max-width: 1780px) {
+                    display: none;
+                }
             }
         }
     }
