--- a/styles/components/_screen.scss
+++ b/styles/components/_screen.scss
@@ -1,22 +1,35 @@
 .screen {
     position: relative;
     display: flex;
-    height: 1280px;
+    height: 1144px;
     background: url(../imgs/screen-bg.png) no-repeat;
     background-size: cover;
     overflow: hidden;
 
     @media #{$desktop} {
-        height: 1000px;
+        height: 900px;
     }
 
     @media #{$tablet} {
+        height: 750px;
+    }
+
+    @media screen and (max-width: 600px) {
+        height: 630px;
+    }
+
+    @media screen and (max-width: 500px) {
         height: 600px;
     }
 
-    @media #{$phone} {
+    @media screen and (max-width: 450px) {
         height: 550px;
     }
+
+    @media screen and (max-width: 400px) {
+        height: 500px;
+    }
+
 
     &__logo {
         position: absolute;
@@ -40,23 +53,50 @@
     }
 
     &__title {
+        display: flex;
+        flex-direction: column;
         font-family: $main-font;
         font-size: 90px;
         font-weight: $font-weight-bold;
         line-height: 90px;
         color: $color-white;
-        margin-top: 350px;
-        margin-left: 163px;
+        margin-top: 228px;
+        margin-left: 570px;
         z-index: 1;
 
+        span {
+            font-size: 80px;
+
+            @media screen and (max-width: 1600px) {
+                font-size: 70px;
+            }
+
+            @media #{$desktop} {
+                font-size: 60px;
+            }
+            
+            @media screen and (max-width: 1150px) {
+                font-size: 50px;
+            }
+        }
+
+        @media screen and (max-width: 1720px) {
+            margin-left: 470px;
+        }
+
+        @media screen and (max-width: 1600px) {
+            font-size: 70px;
+        }
+
         @media #{$desktop} {
-            margin-top: 300px;
-            margin-left: 100px;
+            font-size: 60px;
+            line-height: 60px;
+            margin-top: 240px;
+            margin-left: 400px;
         }
 
         @media screen and (max-width: 1150px) {
-            margin-top: 250px;
-            margin-left: 50px;
+            font-size: 50px;
         }
         
         @media #{$tablet} {
@@ -77,12 +117,33 @@
         }
     }
 
+    &__button {
+        display: none;
+
+        @media #{$tablet} {
+            position: absolute;
+            display: flex;
+            line-height: 54px;
+            margin-right: 0;
+            bottom: 50px;
+            z-index: 2;
+            left: calc(50% - 150px);
+        }
+
+        @media #{$phone} {
+            line-height: 56px;
+            padding: 0 49px;
+            left: calc(50% - 130px);
+            bottom: 0;
+        }
+    }
+
     &__desktop {
         position: absolute;
         width: 100%;
         height: 100%;
         
-        @media #{$tablet} {
+        @media #{$phone} {
             display: none;
         }
     }
@@ -93,7 +154,7 @@
         width: 100%;
         height: 100%;
         
-        @media #{$tablet} {
+        @media #{$phone} {
             display: block;
         }
     }
@@ -106,35 +167,23 @@
         }
 
         &-middle {
-            bottom: -475px;
+            bottom: -320px;
             z-index: 1;
 
             @media screen and (max-width: 1800px) {
-                bottom: -400px;
-            }
-
-            @media screen and (max-width: 1660px) {
-                bottom: -350px;
+                bottom: -280px;
             }
 
             @media #{$desktop} {
-                bottom: -275px;
-            }
-
-            @media screen and (max-width: 1150px) {
                 bottom: -230px;
             }
 
             @media #{$tablet} {
-                bottom: -400px;
+                bottom: -175px;
             }
 
             @media screen and (max-width: 900px) {
-                bottom: -350px;
-            }
-
-            @media screen and (max-width: 800px) {
-                bottom: -300px;
+                bottom: -150px;
             }
 
             @media #{$phone} {
@@ -149,56 +198,59 @@
                 bottom: -175px;
             }
 
-            @media screen and (max-width: 450px) {
+            @media screen and (max-width: 500px) {
                 bottom: -150px;
+            }
+
+            @media screen and (max-width: 450px) {
+                bottom: -125px;
             }
         }
 
         &-bottom {
-            left: -375px;
-            bottom: -200px;
+            left: -600px;
+            bottom: -384px;
+            z-index: 1;
 
             @media screen and (max-width: 1800px) {
-                bottom: -150px;
-            }
-
-            @media screen and (max-width: 1660px) {
-                bottom: -100px;
+                bottom: -300px;
             }
 
             @media #{$desktop} {
-                bottom: 0;
+                bottom: -250px;
             }
         }
     }
 
     &__house {
         position: absolute;
-        right: 136px;
+        width: 100%;
         bottom: 0;
         pointer-events: none;
 
-        @media screen and (max-width: 1800px) {
-            right: 0;
+        @media screen and (max-width: 1920px) {
+            width: auto;
         }
 
-        @media screen and (max-width: 1660px) {
-            right: -100px;
+        @media screen and (max-width: 1720px) {
+            left: -100px;
         }
 
         @media #{$desktop} {
             height: 800px;
-            right: 0;
+            left: 0;
         }
 
         @media #{$tablet} {
             height: auto;
+            width: 100%;
         }
     }
 
     &__light {
         position: absolute;
-        right: 0;
+        top: 40px;
+        right: 117px;
         pointer-events: none;
 
         @media screen and (max-width: 1800px) {
@@ -218,27 +270,6 @@
         @media #{$tablet} {
             height: 345px;
             right: 0;
-        }
-    }
-
-    &__leaves {
-        @media #{$desktop} {
-            height: 600px;
-        }
-
-        &, &-bg {
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            pointer-events: none;
-
-
-        }
-
-        &-bg {
-            @media #{$desktop} {
-                height: 400px;
-            }
         }
     }
 }
