--- a/styles/components/_section-title.scss
+++ b/styles/components/_section-title.scss
@@ -6,20 +6,16 @@
     line-height: 80px;
     color: $color-light-gray;
     width: max-content;
-    margin-left: 163px;
+    margin-left: 8.5%;
     z-index: 1;
-
-    @media screen and (max-width: 1534px) {
-        margin-left: 50px;
-    }
 
     @media screen and (max-width: 1400px) {
         font-size: 70px;
     }
 
     @media screen and (max-width: 1225px) {
-        font-size: 60px !important;
-        line-height: 60px !important;
+        font-size: 60px;
+        line-height: 60px;
     }
     
     @media screen and (max-width: 1168px) {
@@ -27,8 +23,8 @@
     }
 
     @media #{$phone} {
-        font-size: 40px !important;
-        line-height: 40px !important;
+        font-size: 50px;
+        line-height: 50px;
     }
 
     span {
