--- a/styles/reset.css
+++ b/styles/reset.css
@@ -3,13 +3,21 @@
    License: none (public domain)
 */
 
+body {
+    background-color: #F4F6F9;
+}
+
+.body-main {
+    background-color: #fff;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
-dl, dt, dd, ol, ul, li,
+dl, dt, dd,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
